// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary with a single expense 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h1
      className="page-header__text"
    >
      Displaying 
      <span>
        1
      </span>
       
      expense
       with a sum of 
      <span>
        $2.50
      </span>
    </h1>
    <div
      className="page-header__link"
    >
      <Link
        className="button button__hover"
        replace={false}
        to="/create"
      >
        Create Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render expenses summary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h1
      className="page-header__text"
    >
      Displaying 
      <span>
        3
      </span>
       
      expenses
       with a sum of 
      <span>
        $7.00
      </span>
    </h1>
    <div
      className="page-header__link"
    >
      <Link
        className="button button__hover"
        replace={false}
        to="/create"
      >
        Create Expense
      </Link>
    </div>
  </div>
</div>
`;
